--- a/onepage.html
+++ b/onepage.html
@@ -60,11 +60,10 @@
     <section id="sobre">
         <div class="container">
             <div class="row">
-                <div class="col-md-7 col-sm-12">
+                <div class="col-md-7 col-sm-12 sonos">
                     <h2>Sobre nós</h2>
                     <p>Nós somos uma loja de peças especializadas em freios</p>
                     <p>Trabalhamos com as marcas mais renomadas do mercado,sendo numero um  do mercado de peças de freios automotivas .Estamos há vinte anos no mercado.</p>
-                    <a class="btn btn-lg btn-success">Botão</a>
                 </div>
                 <div class="col-md-5 col-sm-12">
                     <img src="imagens/pecas.jpg" alt="Imagem Exemplo" class="img-fluid">
@@ -75,7 +74,7 @@
 
     <section id="produtos">
 
-        <div class="container">
+        <div class="container coo">
             <div class="row">
                 <div class="col">
 
@@ -86,7 +85,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Discos de freio</h5>
                             <p class="card-text">Responsavel por dimunuir a velocidade da roda</p>
-                            <a class="btn btn-primary btd" data-bs-toggle="modal" data-bs-target="#modal-1" >ver produto</a>
+                            <a class="btn btn-primary btd be" data-bs-toggle="modal" data-bs-target="#modal-1" >ver produto</a>
                         </div>
                     </div>
 
@@ -95,7 +94,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Pastilhas de freio</h5>
                             <p class="card-text">Responsavel pela maior parte da frenagem do carro em um sistema de freio a disco</p>
-                            <a class="btn btn-primary btd" data-bs-toggle="modal" data-bs-target="#modal-1" >ver produto</a>
+                            <a class="btn btn-primary btd " data-bs-toggle="modal" data-bs-target="#modal-1" >ver produto</a>
                         </div>
                     </div>
 
@@ -104,7 +103,7 @@
                         <div class="card-body sap">
                             <h5 class="card-title">Sapatas de freio</h5>
                             <p class="card-text">Responsavel pela maior parte da frenagem do carro em um sistema de freio a tambor</p>
-                            <a class="btn btn-primary btd" data-bs-toggle="modal" data-bs-target="#modal-1" >ver produto</a>
+                            <a class="btn btn-primary btd bi" data-bs-toggle="modal" data-bs-target="#modal-1" >ver produto</a>
                         </div>
                     </div>
                     
@@ -126,15 +125,15 @@
                     <form class="form">
 
                         <div class="input-group">
-                            <input class="form-control" type="text" name="nome" placeholder="digite seu nome">
+                            <input class="form-control" type="text" name="nome" placeholder="digite seu nome" required>
                         </div>
 
                         <div class="input-group">
-                            <input class="form-control" type="text" name="email" placeholder="digite seu email">
+                            <input class="form-control" type="email" name="email" placeholder="digite seu email" required>
                         </div>
 
                         <div class="input-group">
-                            <textarea  class="form-control" name="" rows="5"></textarea>
+                            <textarea  class="form-control" name="" rows="5" required></textarea>
                         </div>
 
                         <button type="submit" class="btn btn-lg btn-success">Solicitar Cotação</button>
